crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__add_attributes_to_svg_element__add_attributes_to_svg_element-3.snap
---
source: crates/oxvg_optimiser/src/jobs/add_attributes_to_svg_element.rs
expression: "test_config(r#\"{ \"addAttributesToSvgElement\": {\n            \"attributes\": { \"focusable\": \"false\", \"data-image\": \"icon\" }\n        } }\"#,\n        None)?"
---
<svg xmlns="http://www.w3.org/2000/svg" data-image="icon" focusable="false">
    test
</svg>
